# docs/swagger.json
@@ -134,6 +134,22 @@
                     }
                 }
             }
+        },
+        "/ws": {
+            "get": {
+                "description": "Establish and handle WebSocket connections",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "websocket"
+                ],
+                "summary": "Handle WebSocket connections",
+                "responses": {}
+            }
         }
     }
 }
